[project]
name = "sqlite2png"
version = "0.1.4"
description = "Command line tool to get a png diagram of SQLite DB"
readme = "README.md"
license = {file = "UNLICENSE"}
authors = [
  {name="Anatoli Babenia", email="anatoli@rainforce.org"}
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Topic :: Database :: Front-Ends",
  "Operating System :: OS Independent"
]
dependencies = [
  "sqlalchemy-schemadisplay @ https://github.com/fschulze/sqlalchemy_schemadisplay/archive/7c35dd35f07e55b2ed3880d62fcb4507152b7ac7.zip"
]

[project.urls]
homepage = "https://github.com/abitrolly/sqlite2png"
